# smurf-child

./: .dockerignore  .gitignore  .gitlab-ci.yml  Justfile  README.md  features.yaml  pyproject.toml
.github/workflows/: publish-promote.yaml  validate.yaml
charts/rgw-analysis-web/: Chart.yaml  values.schema.json  values.yaml
charts/rgw-analysis-web/templates/: _helpers.tpl  deployment.yaml  flow-jobs.yaml  runtime-configmap.yaml  service.yaml
deploy/dev/: configmap.yaml  deployment.yaml
docs/: ci-promotion.md  local-development.md  runtime-credentials.md
images/: docker-compose.build.yaml  docker-compose.yaml
images/rgw-analysis-web/flow/: Containerfile
images/rgw-analysis-web/web/: Containerfile  nginx.conf
scripts/: package-chart.sh  test.sh  validate-and-build.sh  validate-chart.sh
scripts/rgw-analysis-web/: build-images.sh  compose-config.sh  install-ci-tools.sh  promote-release.sh  promote_release.rb  scan-public-artifacts.sh  validate-features.sh  validate-image-contexts.sh  validate-render.sh  validate_workflows.rb
smurfx/: ci-metadata.yaml  request.yaml
src/rgw-analysis-web/flow/: .dockerignore
src/rgw-analysis-web/flow/_stubs/boto3/: __init__.pyi  session.pyi
src/rgw-analysis-web/flow/smurf_flow/: __init__.py  cli.py  dataset.py  errors.py  flow.py  models.py  polling.py  protocol.py  render.py  storage.py
src/rgw-analysis-web/web/: DESIGN.md  index.template.html  report.css
src/rgw-analysis-web/web/fixtures/: empty.html  error.html  loading.html  success.html
src/smurf_child/: __init__.py  bundle.py  checkout.py  cli.py  contract.py  evidence.py  handoff.py  handoff_cli.py  manifest.py  models.py  red_contract.py  yaml_adapter.py  yaml_boundary.py
tests/: __init__.py  test_canonical_payload.py  test_cli.py  test_contract_test_quality.py  test_exact_checkout.py  test_handoff_guard.py  test_manifest_contract.py  test_red_contract_runner.py  test_red_fixtures.py  test_request_contract.py  test_strict_yaml.py
tests/fixtures/adversarial/: deployment.json  effective-policy-request.yaml  invalid-request.yaml  karmada-policy.yaml  malformed-manifest.yaml  malformed-request.yaml  mutable-image.yaml  namespace.yaml
tests/rgw-analysis-web/: __init__.py
tests/rgw-analysis-web/artifacts/: test-contracts.sh  test-feature-registry.sh  test-package.sh
tests/rgw-analysis-web/chart/: test-negative-contracts.sh
tests/rgw-analysis-web/ci/: test-promotion.sh  test-workflows.sh
tests/rgw-analysis-web/ci/fixtures/: federation-authority.json  promotion.yaml  release.pinned.yaml  release.tracked.yaml  values.poc.yaml  values.yaml
tests/rgw-analysis-web/fixtures/: values.valid.yaml
tests/rgw-analysis-web/flow/: __init__.py  fakes.py  test_cli.py  test_domain.py  test_fetch.py  test_flow.py  test_moto_pipeline.py  test_render_assets.py
tests/rgw-analysis-web/images/: test-images.sh  test-negative-contracts.sh
tests/rgw-analysis-web/scripts/: test-boundaries.sh  test-public-scan.sh  test-validate-and-build.sh
tests/rgw-analysis-web/web/: test_color_contrast.py  test_static_report.py
typings/yaml/: __init__.pyi  constructor.pyi  nodes.pyi  tokens.pyi
