[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "smurf-child"
version = "0.1.0"
description = "Representative SmurfX child repository contract scaffold"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.11,<3",
    "pyyaml>=6.0.2,<7",
    "rfc8785>=0.1.4,<1",
    "typer>=0.16,<1",
]

[project.scripts]
smurf-child = "smurf_child.cli:main"
smurf-child-red-contract = "smurf_child.red_contract:main"
smurf-child-handoff-guard = "smurf_child.handoff_cli:main"

[dependency-groups]
dev = [
    "basedpyright>=1.29,<2",
    "defusedxml>=0.7,<1",
    "pytest>=8.4,<9",
    "ruff>=0.12,<1",
    "types-pyyaml>=6.0.12,<7",
]

[tool.basedpyright]
typeCheckingMode = "all"
pythonVersion = "3.13"
pythonPlatform = "All"
include = ["src", "tests"]
stubPath = "typings"
exclude = [
    "**/__pycache__",
    "**/.venv",
    "**/build",
    "**/dist",
]
reportUnusedCallResult = "error"
reportUnnecessaryTypeIgnoreComment = "error"
reportUnnecessaryComparison = false
reportUnusedVariable = "error"
reportMissingParameterType = "error"
reportPrivateUsage = "error"

[tool.ruff]
target-version = "py313"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM812", "ISC001", "D203", "D213", "CPY001", "TD002", "TD003", "FIX002"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "ARG", "PLR2004", "SLF001", "D"]
"typings/**/*.pyi" = ["N803"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["typer.Argument", "typer.Option"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = ["-ra", "--strict-config", "--strict-markers"]
filterwarnings = ["error"]
