[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[project]
name = "smurf-flow"
version = "0.1.0"
description = "Smurf RGW analysis flow"
requires-python = ">=3.13,<3.14"
dependencies = [
    "boto3>=1.40,<2",
    "botocore>=1.40,<2",
    "pydantic>=2.11,<3",
    "pydantic-settings>=2.10,<3",
    "typer>=0.16,<1",
]

[project.scripts]
smurf-flow = "smurf_flow.cli:app"

[dependency-groups]
dev = [
    "basedpyright>=1.31,<2",
    "coverage>=7.10,<8",
    "moto[server]>=5.1,<6",
    "pytest>=8.4,<9",
    "pytest-cov>=6.2,<7",
    "ruff>=0.12,<1",
    "types-boto3[s3]>=1.40,<2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/rgw-analysis-web/flow/smurf_flow"]

[tool.basedpyright]
typeCheckingMode = "all"
pythonVersion = "3.13"
pythonPlatform = "All"
include = ["src", "tests"]
exclude = ["**/__pycache__", "**/.venv", "**/build", "**/dist"]
extraPaths = ["src/rgw-analysis-web/flow"]
stubPath = "src/rgw-analysis-web/flow/_stubs"
reportUnusedCallResult = "warning"
reportUnnecessaryTypeIgnoreComment = "error"
reportUnusedVariable = "error"
reportMissingParameterType = "error"
reportPrivateUsage = "error"

[tool.ruff]
target-version = "py313"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",
    "CPY001",
    "D203",
    "D213",
    "FBT001",
    "FBT002",
    "FIX002",
    "ISC001",
    "TD002",
    "TD003",
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ARG", "D", "PLR2004", "S101", "SLF001"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["typer.Argument", "typer.Option"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = ["-ra", "--strict-config", "--strict-markers"]
filterwarnings = ["error"]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
]
